--- a/react-consume-api-model/package.json
+++ b/react-consume-api-model/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-list",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "history": "^5.3.0",
+    "axios": "^1.8.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
