--- a/react-consume-api-model/package.json
+++ b/react-consume-api-model/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
